사진 업데이트

--- a/index.html
+++ b/index.html
@@ -189,28 +189,27 @@
       <section class="rounded-xl2 border border-line bg-white/70 shadow-soft p-4 my-4">
         <div class="flex items-center justify-between mb-2">
           <div class="text-base font-extrabold tracking-[-.3px]">🖼️ 갤러리</div>
-          <small class="text-muted font-medium">사진은 교체하세요</small>
         </div>
 
         <div class="grid grid-cols-2 gap-2.5">
           <!-- 카드 -->
           <div class="relative overflow-hidden rounded-[18px] border border-[rgba(20,18,16,.10)] bg-white/50 aspect-square">
-            <img class="w-full h-full object-cover block" src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=900&q=80" alt="g1">
+            <img class="w-full h-full object-cover block" src="src/image/IMG_0456.png" alt="g1">
             <div class="pointer-events-none absolute inset-0 [background:linear-gradient(180deg,rgba(0,0,0,0)_60%,rgba(0,0,0,.18))]"></div>
           </div>
 
           <div class="relative overflow-hidden rounded-[18px] border border-[rgba(20,18,16,.10)] bg-white/50 aspect-square">
-            <img class="w-full h-full object-cover block" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=900&q=80" alt="g2">
+            <img class="w-full h-full object-cover block" src="src/image/IMG_5812.png" alt="g2">
             <div class="pointer-events-none absolute inset-0 [background:linear-gradient(180deg,rgba(0,0,0,0)_60%,rgba(0,0,0,.18))]"></div>
           </div>
 
           <div class="relative overflow-hidden rounded-[18px] border border-[rgba(20,18,16,.10)] bg-white/50 aspect-square">
-            <img class="w-full h-full object-cover block" src="https://images.unsplash.com/photo-1523438097201-dc6f00f3e409?auto=format&fit=crop&w=900&q=80" alt="g3">
+            <img class="w-full h-full object-cover block" src="src/image/IMG_1688.png" alt="g3">
             <div class="pointer-events-none absolute inset-0 [background:linear-gradient(180deg,rgba(0,0,0,0)_60%,rgba(0,0,0,.18))]"></div>
           </div>
 
           <div class="relative overflow-hidden rounded-[18px] border border-[rgba(20,18,16,.10)] bg-white/50 aspect-square">
-            <img class="w-full h-full object-cover block" src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=900&q=80" alt="g4">
+            <img class="w-full h-full object-cover block" src="src/image/IMG_0346.png" alt="g4">
             <div class="pointer-events-none absolute inset-0 [background:linear-gradient(180deg,rgba(0,0,0,0)_60%,rgba(0,0,0,.18))]"></div>
           </div>
         </div>
@@ -223,7 +222,6 @@
       <section class="rounded-xl2 border border-line bg-white/70 shadow-soft p-4 my-4">
         <div class="flex items-center justify-between mb-2">
           <div class="text-base font-extrabold tracking-[-.3px]">📞 연락처</div>
-          <small class="text-muted font-medium">클릭하면 전화</small>
         </div>
 
         <div class="mt-2 flex flex-wrap justify-center gap-2">
